calendar menu spacing fix

--- a/style/calendar.css
+++ b/style/calendar.css
@@ -170,12 +170,15 @@ ul li {
   width: 100%;
   height: 50em;
   max-height: 50em;
+  /*border: 2px solid #81F57C;*/
+  border-radius: 25px;
 }
 
 #menu {
   margin: 0 auto;
   width: auto;
   display: block;
+  margin-bottom: 1em;
 }
 
 .menu-control {
@@ -199,13 +202,12 @@ ul li {
   border-radius: 25px;
 }
 
-#nameInput {
+/*#nameInput {
   width: 13em;
-  margin-left: 9.1em;
-  margin-bottom:1em;
+  align-items: center;
   text-align: center;
   display: block;
-}
+}*/
 
 .priority {
   text-align: center;
@@ -221,11 +223,17 @@ ul li {
 .menu-title {
   font-family: 'Noto Sans Mono', monospace;
   padding-top: 1em;
-  padding-bottom: 1em;
+  padding-bottom: 2em;
   font-size: 1.25em;
 }
 
 .priority {
   font-family: 'Noto Sans Mono', monospace;
+}
+
+.input {
+  width: 12em;
+  margin-bottom: 1em;
+  margin-right: .5em;
 }
 
